// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute evidence form needing response, renders correctly 1`] = `
<Fragment>
  <Card
    key="general"
    title="General evidence"
  >
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="product_description"
      label="Product description"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_name"
      label="Customer name"
      onChange={[Function]}
      value=""
    />
    <FileUploadControl
      accept=".pdf, image/png, image/jpeg"
      disabled={false}
      field={
        Object {
          "key": "customer_signature",
          "label": "Customer signature",
          "type": "file",
        }
      }
      fileName=""
      isDone={false}
      key="customer_signature"
    />
  </Card>
  <Card>
    <p>
      When you submit your evidence, we'll format it and send it to the cardholder's bank, then email you once the dispute has been decided.
    </p>
    <p>
      <strong>
        Evidence submission is final.
      </strong>
       
      You can also save this evidence for later instead of submitting it immediately.
       
      <strong>
        We will automatically submit any saved evidence at the due date.
      </strong>
    </p>
    <CardFooter>
      <ForwardRef(Button)
        isLarge={true}
        isPrimary={true}
        onClick={[Function]}
      >
        Submit evidence
      </ForwardRef(Button)>
      <ForwardRef(Button)
        isDefault={true}
        isLarge={true}
        onClick={[Function]}
      >
        Save for later
      </ForwardRef(Button)>
    </CardFooter>
  </Card>
</Fragment>
`;

exports[`Dispute evidence form not needing response, renders correctly 1`] = `
<Fragment>
  <Card
    key="general"
    title="General evidence"
  >
    <WithInstanceId(TextareaControl)
      disabled={true}
      key="product_description"
      label="Product description"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={true}
      key="customer_name"
      label="Customer name"
      onChange={[Function]}
      value=""
    />
    <FileUploadControl
      accept=".pdf, image/png, image/jpeg"
      disabled={true}
      field={
        Object {
          "key": "customer_signature",
          "label": "Customer signature",
          "type": "file",
        }
      }
      fileName=""
      isDone={false}
      key="customer_signature"
    />
  </Card>
</Fragment>
`;

exports[`Dispute evidence page renders correctly 1`] = `
<Page
  className="wcpay-dispute-evidence"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Challenge dispute"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence": Object {
            "customer_purchase_ip": "127.0.0.1",
            "uncategorized_text": "",
          },
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "reason": "fraudulent",
          "status": "needs_response",
        }
      }
    />
  </Card>
  <Card
    title={
      <Loadable
        value="Product type"
      />
    }
  >
    <LoadableBlock
      numLines={2}
    >
      <WithInstanceId(SelectControl)
        disabled={false}
        options={
          Array [
            Object {
              "disabled": true,
              "label": "Select one…",
              "value": "",
            },
            Object {
              "label": "Physical product",
              "value": "physical_product",
            },
            Object {
              "label": "Digital product or service",
              "value": "digital_product_or_service",
            },
            Object {
              "label": "Offline service",
              "value": "offline_service",
            },
            Object {
              "label": "Multiple product types",
              "value": "multiple",
            },
          ]
        }
      />
    </LoadableBlock>
  </Card>
  <DisputeEvidenceForm
    evidence={
      Object {
        "customer_purchase_ip": "127.0.0.1",
        "uncategorized_text": "",
      }
    }
    readOnly={false}
    showPlaceholder={false}
  />
</Page>
`;
